include/dss_capi.h

    DSS_CAPI_DLL void CNData_Set_GmrStrand(double Value);
    DSS_CAPI_DLL double CNData_Get_RStrand(void);
    DSS_CAPI_DLL void CNData_Set_RStrand(double Value);
    DSS_CAPI_DLL int32_t CNData_Get_idx(void);
    DSS_CAPI_DLL void CNData_Set_idx(int32_t Value);