src/v8/CAPI_CNData.pas

    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FGmrStrand;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_GmrStrand(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FGmrStrand := Value;
            CNDataSetDefaults(CNDataProps.GmrStrand, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_RStrand(): Double; CDECL;
var
    pCNData: TCNDataObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        Result := pCNData.FRStrand;
    end;
end;
//------------------------------------------------------------------------------
procedure CNData_Set_RStrand(Value: Double); CDECL;
var
    pCNData: TCNDataObj;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pCNData := CNDataClass[ActiveActor].GetActiveObj;
        with pCNData do
        begin
            FRStrand := Value;
            CNDataSetDefaults(CNDataProps.RStrand, pCNData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function CNData_Get_idx(): Integer; CDECL;
begin
    Result := CNDataClass[ActiveActor].ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure CNData_Set_idx(Value: Integer); CDECL;
var
    pCNData: TCNDataObj;
begin
    pCNData := CNDataClass[ActiveActor].ElementList.Get(Value);
end;
//------------------------------------------------------------------------------
end.
